# python-explicit-aspect

./: .gitignore  README.md  pyproject.toml  setup.py
aspect/: __init__.py  advices.py  aspects.py  targets.py
example/: aspect_logic.py  business_logic.py  run_example.py
