[tool.poetry]
name = "aspect"
version = "0.1.0"
description = ""
authors = ["Gamazic <nikita.nov.ru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wheel = "^0.37.1"
setuptools = "^61.1.1"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
